set smtp server

--- a/server/.env
+++ b/server/.env
@@ -11,3 +11,9 @@ CLOUD_API_SECRET="GNue2CT6lHVquPZl8Is_Hkvuxkc"
 
 JWT_SECRET="845j6754987658gh439587"
 ACTIVATION_TOKEN="8674905867j54867hg85gh985"
+
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="465"
+SMTP_SERVICE="gmail"
+SMTP_MAIL="ashraf.dev.bd55@gmail.com",
+SMTP_PASSWORD="czpzqnqrqytpwdkg"
