--- a/server/.env
+++ b/server/.env
@@ -15,5 +15,7 @@ ACTIVATION_TOKEN="8674905867j54867hg85gh985"
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT="465"
 SMTP_SERVICE="gmail"
-SMTP_MAIL="ashraf.dev.bd55@gmail.com",
-SMTP_PASSWORD="czpzqnqrqytpwdkg"
+SMTP_MAIL="ashraf.dev.bd55@gmail.com"
+SMTP_PASSWORD="rcxkkymoypcpusxb"
+
+
