user data save in database

--- a/server/.env
+++ b/server/.env
@@ -10,7 +10,7 @@ CLOUD_API_KEY="646388826229295"
 CLOUD_API_SECRET="GNue2CT6lHVquPZl8Is_Hkvuxkc"
 
 JWT_SECRET="845j6754987658gh439587"
-ACTIVATION_TOKEN="8674905867j54867hg85gh985"
+ACTIVATION_SECRET="8674905867j54867hg85gh985"
 
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT="465"
