--- a/server/.env
+++ b/server/.env
@@ -3,14 +3,18 @@ ORIGIN= ["http://localhost:3000"]
 
 DB_URI="mongodb+srv://taifur:taifur123@cluster0.8s6dqqw.mongodb.net/lms?retryWrites=true&w=majority"
 
-REDIS_URL="redis://default:d93ef010b27d453ea59edf6bc22e8ad9@model-hedgehog-36970.upstash.io:36970"
+REDIS_URL="rediss://default:d93ef010b27d453ea59edf6bc22e8ad9@model-hedgehog-36970.upstash.io:36970"
 
 CLOUD_NAME="djfmxrud0"
 CLOUD_API_KEY="646388826229295"
 CLOUD_API_SECRET="GNue2CT6lHVquPZl8Is_Hkvuxkc"
 
 JWT_SECRET="845j6754987658gh439587"
+ACCESS_TOKEN_SECRET="u3yB1OxTVseM+2Rvh3ZkOUAcF7aAoTF4b7bU6hKxAFk"
+REFRESH_TOKEN_SECRET="LAfC5IJ09GJj93AbeCSTa660zvqfvcqDoPNpezvLdng"
 ACTIVATION_SECRET="8674905867j54867hg85gh985"
+ACCESS_TOKEN_EXPIRE=5
+REFRESH_TOKEN_EXPIRE=60
 
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT="465"
