--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.5",
     "redis": "^4.6.10",
     "ts-node-dev": "^2.0.0",
@@ -42,6 +43,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.9",
+    "@types/node-cron": "^3.0.10",
     "@types/uuid": "^9.0.3"
   }
 }
