implement social auth

--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,9 @@
 NEXT_PUBLIC_SERVER_URL="http://localhost:4000/api/"
+
+GOOGLE_CLIENT_ID="538493396055-45mcded447asv6ovmfjchi13llnkgolu.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+
+GITHUB_CLIENT_ID="ffe3aa68fde742f6931c"
+GITHUB_CLIENT_SECRET="b4f40a68b317f2b1694df70721d26319fb3b090b"
+
+NEXTAUTH_SECRET=" un87649054p89p7yn5cv9342y843ny62oncvt5"
