--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.3",
+    "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
