--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-redux": "^8.1.3",
     "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.0.0",
