--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 PORT=4000
 ORIGIN= ["http://localhost:3000"]
+CLIENT_URL="http://localhost:3000"
 
 DB_URI="mongodb+srv://taifur:taifur123@cluster0.8s6dqqw.mongodb.net/lms?retryWrites=true&w=majority"
 
