reset password link more sucoure

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT=4000
 ORIGIN= ["http://localhost:3000"]
 CLIENT_URL="http://localhost:3000"
+SERVER_URL="http://localhost:4000"
 
 DB_URI="mongodb+srv://taifur:taifur123@cluster0.8s6dqqw.mongodb.net/lms?retryWrites=true&w=majority"
 
