--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,8 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
+    "winston": "^3.11.0",
+    "winston-mongodb": "^5.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
